# haskell-qt-qml-todo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cabal.project  code_walkthrough.md  hie.yaml
cpp/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
haskell/: copy-bin.sh  haskell-backend.cabal  todos.db  todos.db-journal
haskell/app/: Main.hs
haskell/src/: AppState.hs  DB.hs  Handler.hs  Logger.hs  State.hs
haskell/src/Todo/: Projects.hs  Todo.hs
haskell/src/Types/: Project.hs  Todo.hs
qml/: Main.qml  SidebarItem.qml  TodoCard.qml
