cabal-version: 2.4
name:          haskell-backend
version:       0.1.0.0
build-type:    Simple

executable haskell-backend
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:    Handler, Types.Todo, Types.Project, Todo.Todo, Todo.Projects, AppState, State, DB, Logger
  build-depends:
    base          >= 4.14 && < 5,
    aeson         >= 2.0,
    text          >= 1.2,
    bytestring    >= 0.10,
    stm           >= 2.5,
    containers    >= 0.6,
    sqlite-simple >= 0.4,
    directory     >= 1.3,
    filepath      >= 1.4
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
